# holistic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  env.sh
.github/workflows/: pr-check.yaml
backend/: .pylintrc  Dockerfile  pyproject.toml
backend/holistic/: asgi.py
backend/tests/: test_holistic.py
docker/compose/: dev.yaml
frontend/: Dockerfile  package.json  tsconfig.json
frontend/config/: modules.js  paths.js  webpack.config.js
frontend/holistic/: App.tsx
frontend/tests/: App.test.tsx
