[tool.poetry]
name = "holistic"
version = "0.1.0"
description = ""
authors = ["Radosław Ganczarek <radoslaw@ganczarek.in>"]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.18.0"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deploy-dev = "holistic.asgi:start"