[tool.poetry]
name = "holistic"
version = "0.1.0"
description = ""
authors = ["Radosław Ganczarek <radoslaw@ganczarek.in>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.5"
starlette = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deploy-dev = "holistic.asgi:start"
